[gd_scene load_steps=2 format=3 uid="uid://dt2p0v584t236"]

[ext_resource type="Script" path="res://addons/PlanetEditor/subeditors/float_input.gd" id="1_emyf2"]

[node name="FloatInput" type="HBoxContainer"]
script = ExtResource("1_emyf2")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 28)
layout_mode = 2
text = "0"
select_all_on_focus = true

[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
